--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,14 @@ h6 {
 }
 
 a {
-    color: #EF233C;
+    color: #15c;
     transition: .3s;
 }
 
 a:hover,
 a:active,
 a:focus {
-    color: #EF233C;
+    color: #15c;
     outline: none;
     text-decoration: none;
 }
@@ -44,20 +44,20 @@ a:focus {
     font-weight: 600;
     letter-spacing: 1px;
     color: #ffffff;
-    background: #EF233C;
+    background: #15c;
     border: 2px solid transparent;
     border-radius: 0;
-    box-shadow: inset 0 0 0 50px #EF233C;
+    box-shadow: inset 0 0 0 50px #15c;
     transition: ease-out 0.3s;
     -webkit-transition: ease-out 0.3s;
     -moz-transition: ease-out 0.3s;
 }
 
 .btn:hover {
-    color: #EF233C;
+    color: #15c;
     background: transparent;
-    box-shadow: inset 0 0 0 0 #EF233C;
-    border-color: #EF233C;
+    box-shadow: inset 0 0 0 0 #15c;
+    border-color: #15c;
 }
 
 #loader {
@@ -91,7 +91,7 @@ a:focus {
     width: 45px;
     height: 45px;
     border: 5px solid #dddddd;
-    border-top: 5px solid #EF233C;
+    border-top: 5px solid #15c;
     border-radius: 50%;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
@@ -304,7 +304,7 @@ ul.network-icon {
 ul.network-icon li {
 		display: inline;
         font-size:25px; 
-        color:#EF233C; 
+        color:#15c; 
 }
 
 
@@ -330,7 +330,7 @@ ul.network-icon li {
 
 .hero .hero-btn .btn {
     margin-top: 35px;
-    color: #EF233C;
+    color: #15c;
     background: #ffffff;
     box-shadow: inset 0 0 0 50px #ffffff;
 }
@@ -445,9 +445,9 @@ ul.network-icon li {
     height: 1em;
     padding: .8em;
     margin-right: 1em;
-    border: .25em solid #EF233C;
-    background: #EF233C;
-    color: #EF233C;
+    border: .25em solid #15c;
+    background: #15c;
+    color: #15c;
     font-family: arial;
     font-weight: bold;
     text-align: center;
@@ -485,7 +485,7 @@ ul.network-icon li {
     top: 11px;
     right: 0;
     left: -30px;
-    background: #EF233C;
+    background: #15c;
     z-index: -1;
 }
 
@@ -496,7 +496,7 @@ ul.network-icon li {
     height: 3px;
     top: 11px;
     left: 3px;
-    background: #EF233C;
+    background: #15c;
     z-index: 1;
 }
 
@@ -578,7 +578,7 @@ ul.network-icon li {
 
 .about .progress .progress-bar {
     width: 0px;
-    background: #EF233C;
+    background: #15c;
     border-radius: 10px;
     transition: 2s;
 }
@@ -611,7 +611,7 @@ ul.network-icon li {
     content: '';
     position: absolute;
     width: 2px;
-    background: #EF233C;
+    background: #15c;
     top: 0;
     bottom: 0;
     left: 50%;
@@ -643,7 +643,7 @@ ul.network-icon li {
     top: 48px;
     right: -8px;
     background: #ffffff;
-    border: 2px solid #EF233C;
+    border: 2px solid #15c;
     border-radius: 16px;
     z-index: 1;
 }
@@ -675,7 +675,7 @@ ul.network-icon li {
     top: 44px;
     font-size: 16px;
     font-weight: 600;
-    color: #EF233C;
+    color: #15c;
     text-transform: uppercase;
     letter-spacing: 1px;
     z-index: 1;
@@ -795,14 +795,14 @@ ul.network-icon li {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #EF233C;
+    border: 1px solid #15c;
     background: #ffffff;
 }
 
 .service .service-icon i {
     position: relative;
     font-size: 60px;
-    color: #EF233C;
+    color: #15c;
     transition: .3s;
 }
 
@@ -863,10 +863,10 @@ ul.network-icon li {
     font-size: 14px;
     font-weight: 600;
     color: #ffffff;
-    background: #EF233C;
+    background: #15c;
     border: 2px solid transparent;
     border-radius: 0;
-    box-shadow: inset 0 0 0 50px #EF233C;
+    box-shadow: inset 0 0 0 50px #15c;
     transition: ease-out 0.3s;
     -webkit-transition: ease-out 0.3s;
     -moz-transition: ease-out 0.3s;
@@ -874,10 +874,10 @@ ul.network-icon li {
 
 .portfolio #portfolio-filter li:hover,
 .portfolio #portfolio-filter li.filter-active {
-    color: #EF233C;
+    color: #15c;
     background: transparent;
-    box-shadow: inset 0 0 0 0 #EF233C;
-    border-color: #EF233C;
+    box-shadow: inset 0 0 0 0 #15c;
+    border-color: #15c;
 }
 
 .portfolio .portfolio-item {
@@ -939,10 +939,10 @@ ul.network-icon li {
 }
 
 .portfolio .portfolio-item:hover a.btn {
-    color: #EF233C;
+    color: #15c;
     background: transparent;
-    box-shadow: inset 0 0 0 0 #EF233C;
-    border-color: #EF233C;
+    box-shadow: inset 0 0 0 0 #15c;
+    border-color: #15c;
 }
 
 
@@ -954,7 +954,7 @@ ul.network-icon li {
     width: 100%;
     margin: 45px 0;
     padding: 90px 0;
-    background: #EF233C;
+    background: #15c;
 }
 
 .banner .container {
@@ -991,7 +991,7 @@ ul.network-icon li {
 
 .banner .banner-text .btn {
     margin-top: 15px;
-    color: #EF233C;
+    color: #15c;
     background: #ffffff;
     box-shadow: inset 0 0 0 50px #ffffff;
 }
@@ -1045,7 +1045,7 @@ ul.network-icon li {
 }
 
 .price .price-item.featured-item .price-header {
-    color: #EF233C;
+    color: #15c;
 }
 
 .price .price-title h2 {
@@ -1075,7 +1075,7 @@ ul.network-icon li {
 }
 
 .price .price-item.featured-item h2 {
-    color: #EF233C;
+    color: #15c;
 }
 
 .price .price-body {
@@ -1111,15 +1111,15 @@ ul.network-icon li {
 
 .price .price-item.featured-item .price-action .btn {
     color: #ffffff;
-    background: #EF233C;
-    box-shadow: inset 0 0 0 50px #EF233C;
+    background: #15c;
+    box-shadow: inset 0 0 0 50px #15c;
 }
 
 .price .price-item.featured-item .price-action .btn:hover {
-    color: #EF233C;
+    color: #15c;
     background: transparent;
-    box-shadow: inset 0 0 0 0 #EF233C;
-    border-color: #EF233C;
+    box-shadow: inset 0 0 0 0 #15c;
+    border-color: #15c;
 }
 
 
@@ -1162,7 +1162,7 @@ ul.network-icon li {
 }
 
 .team .team-text h2 {
-    color: #EF233C;
+    color: #15c;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 5px;
@@ -1201,7 +1201,7 @@ ul.network-icon li {
 }
 
 .team .team-item:hover {
-    box-shadow: inset 800px 0 0 0 #EF233C;
+    box-shadow: inset 800px 0 0 0 #15c;
 }
 
 .team .team-item:hover .team-img img {
@@ -1251,7 +1251,7 @@ ul.network-icon li {
     position: relative;
     margin: 45px 0;
     padding: 90px 0;
-    background: #EF233C;
+    background: #15c;
 }
 
 .testimonial .container {
@@ -1303,7 +1303,7 @@ ul.network-icon li {
 }
 
 .testimonial .testimonial-text h3 {
-    color: #EF233C;
+    color: #15c;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 10px;
@@ -1341,7 +1341,7 @@ ul.network-icon li {
     position: relative;
     width: 100%;
     margin: 45px 0;
-    background: #EF233C;
+    background: #15c;
 }
 
 .contact .container-fluid {
@@ -1352,7 +1352,7 @@ ul.network-icon li {
 .contact .contact-form {
     position: relative;
     padding: 90px 0 90px 45px;
-    background: #EF233C;
+    background: #15c;
 }
 
 .contact .contact-form input {
@@ -1386,7 +1386,7 @@ ul.network-icon li {
 
 .contact .contact-form .btn {
     margin-top: 35px;
-    color: #EF233C;
+    color: #15c;
     background: #ffffff;
     box-shadow: inset 0 0 0 50px #ffffff;
 }
@@ -1500,7 +1500,7 @@ ul.network-icon li {
 .footer {
     position: relative;
     margin-top: 45px;
-    background: #EF233C;
+    background: #15c;
 }
 
 .footer .container-fluid {
